--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
+        django-version: ["3.2", "4.2", "5.0"]
 
     steps:
       - name: Checkout code
@@ -26,6 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install "Django~=${{ matrix.django-version }}"
           pip install -e .
           pip install pytest pytest-django
 
